Import SVG code, immplete JS code and css animations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>SVG Animation Text</title>
 </head>
 <body>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 922.43 406.21">
+        <text transform="matrix(1 0 0 1.01 196.58 216.63)" font-size="102" font-family="TrainOne-Regular">
+          Algorithm
+        </text>
+      </svg>
     
     <script src="index.js"></script>
 </body>
